# henry_proyecto_integrador_m1

./: .env.example  .gitignore  README.md  pyproject.toml
metrics/: metrics.csv
prompts/: main_prompt.txt
reports/: PI_report.md  PI_report_en.md
src/: database.py  ejemplos.py  metrics_writer.py  prompts_loader.py  run_query.py  safety.py  schemas.py  settings.py  tools.py
tests/: test_core.py
